--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ django = "^4.0.2"
 django-rest-framework = "^0.1.0"
 django-cors-headers = "^3.11.0"
 djangorestframework-simplejwt = "^5.0.0"
+requests = "^2.27.1"
+djangorestframework-dataclasses = "^1.1.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
