--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,11 +12,24 @@ django-cors-headers = "^3.11.0"
 djangorestframework-simplejwt = "^5.0.0"
 requests = "^2.27.1"
 djangorestframework-dataclasses = "^1.1.1"
+psycopg2 = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
-black = "^22.1.0"
+black = "21.7b0"
 pytest = "^6.2.5"
 flake8 = "^4.0.1"
+pytest-django = "4.4.0"
+pytest-env = "0.6.2"
+pytest-asyncio = "0.15.1"
+pytest-ordering = "0.6"
+pytest-mock = "3.6.1"
+freezegun = "1.1.0"
+responses = "0.13.4"
+watchdog = "2.1.4"
+argh = "0.26.2"
+pyinstrument = "4.0.3"
+pyfakefs = "4.5.0"
+pytest-xdist = "2.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
