--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,8 @@ djangorestframework-simplejwt = "^5.0.0"
 requests = "^2.27.1"
 djangorestframework-dataclasses = "^1.1.1"
 psycopg2 = "^2.9.3"
+uvicorn = "^0.17.4"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "21.7b0"
